{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 304,
  "lineage": "cf9f9fd9-698f-f528-c89a-844b44ca7724",
  "resources": [
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213910106321:security-group/sg-0b2ced8b9371db178",
            "description": "Allow self IP to ssh to bastion instance and allow all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2ced8b9371db178",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "117.194.11.234/32"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion host SG",
            "name_prefix": "",
            "owner_id": "213910106321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rohit-456-bastion-host-SG"
            },
            "tags_all": {
              "Name": "rohit-456-bastion-host-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c05cfa2ca5fd6c75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-groups.data.http.myip",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instances_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213910106321:security-group/sg-037a3de462b94f5bc",
            "description": "Allow all incoming traffic from within VPC and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037a3de462b94f5bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2ced8b9371db178"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2ced8b9371db178"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "jenkins access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2ced8b9371db178"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2ced8b9371db178"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private instance SG",
            "name_prefix": "",
            "owner_id": "213910106321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rohit-456-private-instances-SG"
            },
            "tags_all": {
              "Name": "rohit-456-private-instances-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c05cfa2ca5fd6c75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-groups.aws_security_group.bastion_host_SG",
            "module.security-groups.data.http.myip",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213910106321:internet-gateway/igw-0a3a35a0511515932",
            "id": "igw-0a3a35a0511515932",
            "owner_id": "213910106321",
            "tags": {
              "Name": "rohit-456-igw"
            },
            "tags_all": {
              "Name": "rohit-456-igw"
            },
            "vpc_id": "vpc-0c05cfa2ca5fd6c75"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213910106321:vpc/vpc-0c05cfa2ca5fd6c75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062e4d17b43ffc3f8",
            "default_route_table_id": "rtb-05ec1dcd3117ddfd5",
            "default_security_group_id": "sg-0e4d019ea60faf4dd",
            "dhcp_options_id": "dopt-0292508ac28117c99",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c05cfa2ca5fd6c75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ec1dcd3117ddfd5",
            "owner_id": "213910106321",
            "tags": {
              "Name": "rohit-456-vpc"
            },
            "tags_all": {
              "Name": "rohit-456-vpc"
            }
          }
        }
      ]
    }
  ]
}